--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,10 +16,12 @@ jobs:
               uses: actions/setup-java@v4
               with:
                   distribution: 'temurin'
-                  java-version: '21'
-                  cache: 'gradle'
+                  java-version:  '21'
+                  cache:  'gradle'
+            - name: Make gradlew executable
+              run:  chmod +x gradlew
             - name: Build
-              run: ./gradlew build
+              run:  ./gradlew build
             - name: Upload Fabric
               uses: actions/upload-artifact@v4
               with:
