--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,16 @@ repositories {
 	// Loom adds the essential maven repositories to download Minecraft and libraries from automatically.
 	// See https://docs.gradle.org/current/userguide/declaring_repositories.html
 	// for more information about repositories.
+
+	// TerraformersMC Maven pour ModMenu
+	maven {
+		url = "https://maven.terraformersmc.com/releases"
+	}
+
+	// Shedaniel Maven pour Cloth Config
+	maven {
+		url = "https://maven.shedaniel.me/"
+	}
 }
 
 dependencies {
@@ -42,6 +52,14 @@ dependencies {
 	modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+
+	// ModMenu pour l'interface de configuration
+	modImplementation "com.terraformersmc:modmenu:16.0.0-rc.2"
+
+	// Cloth Config pour les écrans de configuration
+	modImplementation("me.shedaniel.cloth:cloth-config-fabric:20.0.149") {
+		exclude(group: "net.fabricmc.fabric-api")
+	}
 }
 
 processResources {
