--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,45 +1,25 @@
-# Used when a commit is pushed to the repository
-# This makes use of caching for faster builds and uploads the resulting artifacts
-name: build-commit-nopublish
-
-on:
-  push:
-    branches-ignore:
-      - dev
-
+name: Build Chomagerie
+on: [ push, pull_request ]
 jobs:
   build:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Extract current branch name
-        shell: bash
-        # bash pattern expansion to grab branch name without slashes
-        run: ref="${GITHUB_REF#refs/heads/}" && echo "branch=${ref////-}" >> $GITHUB_OUTPUT
-        id: ref
-
-      - name: Checkout sources
+      - name: Checkout repository
         uses: actions/checkout@v4
-
-      - name: Setup Java 21
+        with:
+          fetch-depth: 0
+      - name: Set up JDK
         uses: actions/setup-java@v4
         with:
-          distribution: temurin
-          java-version: 21
-
-      - name: Setup Gradle
-        uses: gradle/actions/setup-gradle@v4
-        with:
-          cache-read-only: false
-
+          distribution: 'temurin'
+          java-version: '21'
+          cache: 'gradle'
       - name: Make gradlew executable
-        run: chmod +x ./gradlew
-
-      - name: Execute Gradle build
+        run: chmod +x gradlew
+      - name: Build
         run: ./gradlew build
-
-      - name: Upload artifacts
+      - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
-          name: chomagerie-artifacts-${{ steps.ref.outputs.branch }}
-          path: build/mods/*.jar
+          name: Chomagerie-Mod
+          path: "build/libs/*.jar"
