--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -8,38 +8,56 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-      - name: Set up JDK
+
+      - name: Setup JDK 21
         uses: actions/setup-java@v4
         with:
-          distribution: 'temurin'
-          java-version: '21'
-          cache: 'gradle'
-      - name: Make gradlew executable
+          distribution: adopt
+          java-version: 21
+
+      - name: Setup Gradle
+        uses: gradle/actions/setup-gradle@v4
+        with:
+          gradle-home-cache-cleanup: true
+          cache-read-only: true
+
+      - name: Validate Gradle Wrapper Integrity
+        uses: gradle/actions/wrapper-validation@v4
+
+      - name: Grant execute permission for gradlew
         run: chmod +x gradlew
-      - name: Build
+
+      - name: Gradle Release Build
+        env:
+          RELEASE_WORKFLOW: true
+          PLATFORM: ${{ inputs.platform }}
         run: ./gradlew build
+
+      - name: Set environment variables for the script below
+        run: |
+          echo "MINECRAFT_VERSION=$(./gradlew -q printMinecraftVersion)" >> $GITHUB_ENV
+          echo "MOD_VERSION=$(./gradlew -q printModVersion)" >> $GITHUB_ENV
+
       - name: Upload Build Artifacts
         uses: actions/upload-artifact@v4
         with:
           name: Chomagerie-Mod
           path: "build/libs/*.jar"
 
-      - name: Extract version and create tag
-        if: github.event_name == 'push' && github.ref == 'refs/heads/master'
+      - name: Set Release Name
         run: |
-          MOD_VERSION=$(grep 'mod_version' gradle.properties | cut -d'=' -f2)
-          TAG_NAME="v${MOD_VERSION}"
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git tag -a "$TAG_NAME" -m "Release $TAG_NAME" || echo "Tag already exists"
-          git push origin "$TAG_NAME" || echo "Tag push failed"
+          if [ "${{ inputs.platform }}" == "fabric" ]; then
+            echo "RELEASE_NAME=Chomagerie $MOD_VERSION for Minecraft $MINECRAFT_VERSION Fabric" >> $GITHUB_ENV
+          fi
 
       - name: Create GitHub Release
-        if: startsWith(github.ref, 'refs/tags/')
-        uses: softprops/action-gh-release@v1
-        with:
-          files: build/libs/!(*-sources).jar
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: |
+          gh release create mc${{ env.MINECRAFT_VERSION }}-${{ env.MOD_VERSION }} \
+            --title="${{ env.RELEASE_NAME }}" \
+            --notes-file=CHANGELOG.md \
+            --target=${{ github.ref_name }} \
+            --draft=false \
+            --prerelease=${{ inputs.releaseType != 'stable' }} \
+            build/libs/*.jar LICENSE.md
